<resources>
    <string name="app_name">Teacher Assistant</string>
    <string name="subjects">Subjects</string>
    <string name="students">Students</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="album_id">Album id</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="name">Name</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="classroom">Class</string>
    <string name="management_add_subject_btn_text">Add subject</string>
    <string name="management_add_student_btn_text">Add student</string>
    <string name="settings_change_language_btn_text">Change language</string>
    <string name="settings_remove_data_btn_text">Remove data</string>
    <string name="student_add_personal_data_text">Personal data</string>
    <string name="student_add_assign_to_subjects_text">Assign to subjects</string>
    <string name="subject_add_subject_data_text">Subject data</string>
    <string name="del">X</string>
    <string name="diary">Diary</string>
    <string name="management">Management</string>
    <string name="settings">Settings</string>
    <string name="add_grade">Add grade</string>
    <string name="mark">Mark</string>
    <string name="comment">Comment</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="mark_value">
        <item>2.0</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
    </string-array>
</resources>