<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.mark.FragmentMarkAdd"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/mark_add_add_grade_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_grade"
        android:gravity="end"
        android:textSize="20sp"
        android:layout_margin="10sp"
        />
    <Spinner
        android:id="@+id/mark_add_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mark"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mark_add_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment" />

    <Button
        android:id="@+id/button_add_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        />

</LinearLayout>