<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentSettings">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_change_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_change_language_btn_text"
            android:layout_marginBottom="30sp"
            />

        <Button
            android:id="@+id/button_remove_data"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/settings_remove_data_btn_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/settings_textView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>

</FrameLayout>