<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.student.FragmentStudentAdd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Personal data"
        android:gravity="end"
        android:textSize="20sp"
        android:layout_margin="10sp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/student_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/student_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/student_album_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/album_number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Assign to subjects"
        android:textSize="20sp"
        android:gravity="end"
        android:layout_margin="10sp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

    <Button
        android:id="@+id/button_add_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"

        />

</LinearLayout>